fix(LoginPage): remove unnecessary spacing

--- a/client/src/app/login/page.module.scss
+++ b/client/src/app/login/page.module.scss
@@ -47,7 +47,6 @@
     }
 
     .loginContainer {
-        flex: 1;
         max-width: 500px;
         background-color: var(--color-background);
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
